data/derived/fa15/progs/unify/prog2631.ml.out
Characters 89-104:
  | Sine e' -> sin (3.142 *. exprToString e')
                             ^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
